<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_wikitude"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_wikitude" />
        <item
            android:id="@+id/nav_ayuda"
            android:icon="@drawable/help_icon"
            android:title="@string/menu_ayuda" />
    </group>
    <item
        android:title="Perfil">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_login"
                    android:title="Login"
                    android:icon="@drawable/login_icon"/>
                <item
                    android:id="@+id/nav_perfil"
                    android:title="Perfil"
                    android:icon="@drawable/profile_icon"/>
                <item
                    android:id="@+id/logout"
                    android:title="Logout"
                    android:icon="@drawable/logout_icon"/>
            </group>
        </menu>
    </item>


    <item android:title="Comunicacion">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="Share"
                android:icon="@drawable/share_icon">
            </item>
            <item
                android:id="@+id/nav_rate"
                android:title="Calificanos"
                android:icon="@drawable/rate_icon">

            </item>
        </menu>
    </item>
</menu>